# localwispr

./: .gitignore  PROJECT_SPEC.md  create-ico.ps1  create-icons.ps1  create-proper-ico.ps1  index.html  package-lock.json  package.json  whatistheapp.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  keyboard.rs  main.rs  soniox.rs
src/components/: ApiKeySetup.tsx  RecordingPopup.tsx
src/styles/: globals.css  popup.css
